[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Ondrej Kolafa",email = "kolafa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "black (>=25.1.0,<26.0.0)",
    "ruff (>=0.11.2,<0.12.0)",
]

[tool.poetry]
packages = [{include = "app"}]

[tool.black]
line-length = 119

[tool.ruff]
line-length = 119
[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
